--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -41,9 +41,12 @@ h4 {
     padding: 10px;
 }
 
-// links
 a {
     &:link {
+        text-decoration: none;
+        color: black;
+    }
+    &:visited {
         text-decoration: none;
         color: black;
     }
@@ -51,11 +54,27 @@ a {
         text-decoration: none;
         color: steelblue;
     }
+}
+
+// links
+nav {
+    a {
+    &:link {
+        text-decoration: none;
+        color: black;
+    }
     &:visited {
         text-decoration: none;
         color: black;
     }
+     &:hover {
+        text-decoration: none;
+        color: steelblue;
+    }
 }
+    
+}
+
 header {
     background: linear-gradient( rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url(../../images/header-img.jpeg);
     background-size: cover;
@@ -66,6 +85,21 @@ header {
     div {
         padding-top: 10vh;
     }
+    a {
+        &:link {
+            text-decoration: none;
+            color: white;
+        }
+        &:visited {
+            text-decoration: none;
+            color: white;
+        }
+         &:hover {
+            text-decoration: none;
+            color: lightgrey;
+        }
+    }
+
     button {
         background: transparent;
         border: 2px solid #fff;
@@ -77,7 +111,9 @@ header {
             border: 2px solid darkgrey;
         }
     }
+  
 }
+
 section {
     padding: 50px 0;
 }
