--- a/sass/modules/_variables.scss
+++ b/sass/modules/_variables.scss
@@ -1,3 +1,8 @@
+//fonts: 
+
+$old: 'Old Standard TT', serif;
+$lato: 'Lato', serif;
 
 
-//@media (max-width: 768px) {}
+$darkgrey: #484a4c;
+$darkpink: #946f6f;
