--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -2,135 +2,133 @@
 //    border: 1px solid red;
 //}
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: $lato;
     font-size: 14px;
+    color: $darkgrey;
 }
-
 p {
-    color: darkgrey;
     text-align: center;
-    font-family: 'Open Sans', sans-serif;
+    font-family: $lato;
 }
-
 .container {
     margin-left: auto;
     margin-right: auto;
     text-align: center;
 }
-
 //headings
 h1 {
-    font-family: 'Poiret One', sans-serif;
-    color: #fff;
+    font-family: $old;
+    color: $darkgrey;
     font-size: 4em;
     padding: 40px;
     text-align: center;
+    font-weight: normal;
+    text-transform: uppercase;
 }
 h2 {
-    font-family: 'Poiret One', sans-serif;
-    color: #fff;
-    font-size: 3em;
+    font-family: $old;
+    color: $darkgrey;
+    font-size: 2em;
     text-align: center;
+    font-weight: normal;
 }
 h3 {
-    font-family: 'Poiret One', sans-serif;
+    font-family: $old;
     line-height: 100px;
     font-size: 2em;
+    color: $darkgrey;
+    font-weight: normal;
+    text-transform: uppercase;
 }
 h4 {
     padding: 10px;
 }
-
 a {
     &:link {
         text-decoration: none;
-        color: black;
+        color: $darkgrey;
     }
     &:visited {
         text-decoration: none;
-        color: black;
+        color: $darkgrey;
     }
     &:hover {
         text-decoration: none;
-        color: steelblue;
+        color: $darkpink;
     }
-}
-
-// links
-nav {
-    a {
-    &:link {
-        text-decoration: none;
-        color: black;
-    }
-    &:visited {
-        text-decoration: none;
-        color: black;
-    }
-     &:hover {
-        text-decoration: none;
-        color: steelblue;
-    }
-}
-    
-}
-
-header {
-    background: linear-gradient( rgba(0, 0, 0, 0.45), rgba(0, 0, 0, 0.45)), url(../../images/header-img.jpeg);
-    background-size: cover;
-    min-height: 100vh;
-    text-align: center;
-    line-height: 100px;
-    color: #fff;
-    div {
-        padding-top: 10vh;
-    }
-    a {
-        &:link {
-            text-decoration: none;
-            color: white;
-        }
-        &:visited {
-            text-decoration: none;
-            color: white;
-        }
-         &:hover {
-            text-decoration: none;
-            color: lightgrey;
-        }
-    }
-
-    button {
-        background: transparent;
-        border: 2px solid #fff;
-        padding: 25px;
-        border-radius: 10px;
-        color: #fff;
-        margin: 0 auto;
-        &:hover {
-            border: 2px solid darkgrey;
-        }
-    }
-  
-}
-
-section {
-    padding: 50px 0;
 }
 nav {
     text-align: center;
-    line-height: 50px;
     width: 100%;
-    background-color: #fff;
+    background-color: transparent;
     .menu li,
     ul {
         display: inline-block;
     }
-    img {
-        padding: 30px 45px 0;
+}
+nav {
+    a {
+        &:link {
+            text-decoration: none;
+            color: black;
+        }
+        &:visited {
+            text-decoration: none;
+            color: black;
+        }
+        &:hover {
+            transition: all 0.4s ease-out;
+            text-decoration: none;
+            color: $darkpink;
+        }
     }
 }
-
+header {
+    background: linear-gradient( rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.45)), url(../images/95cdfeef.jpg);
+    background-size: cover;
+    min-height: 100vh;
+    text-align: center;
+    line-height: 100px;
+    color: #000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    a {
+        &:link {
+            text-decoration: none;
+            color: $darkgrey;
+        }
+        &:visited {
+            text-decoration: none;
+            color: $darkgrey;
+        }
+        &:hover {
+            transition: all 0.4s ease-out;
+            text-decoration: none;
+            color: $darkpink;
+        }
+    }
+    button {
+        background: transparent;
+        border: 0;
+        padding: 25px;
+        color: #fff;
+        margin: 0 auto;
+        img {
+            transform: translate(0, 0);
+            transition: transform 0.4s ease-in-out;
+        }
+        &:hover {
+            img {
+                transform: translate(0, 20px);
+                transition: transform 0.4s ease-in-out;
+            }
+        }
+    }
+}
+section {
+    padding: 75px 0;
+}
 //sticky menu
 .sticky {
     width: 100%;
@@ -142,11 +140,7 @@ nav {
     margin: 0 auto;
     border-bottom: 1px dotted lightgrey;
     z-index: 2;
-//    ul.menu li {
-//        padding: 0 10px;
-//    }
 }
-
 ul {
     &.menu {
         li {
@@ -154,15 +148,13 @@ ul {
             display: inline-block;
             color: darkgrey;
             text-transform: uppercase;
-            font-family: 'Dosis', sans-serif;
-            letter-spacing: 0.5em;
-            padding: 20px;
+            font-family: $lato;
+            padding: 20px 30px;
             font-size: 0.7em;
             font-weight: 600;
         }
     }
 }
-
 //line
 hr {
     border: 0;
@@ -174,60 +166,46 @@ hr {
         padding: 40px;
     }
 }
-
 // about-me section
 #profilepic {
-    border-radius: 50%;
+    border-radius: 50% 0 50% 50%;
     height: 250px;
     object-fit: cover;
     float: left;
+    margin-right: 20px;
 }
-.about-text {
-    max-width: 60%;
+.aboutme-text {
+    max-width: 80%;
     margin: 0 auto;
+    text-align: left;
     p {
-        line-height: 25px;
-        padding: 25px;
+        line-height: 35px;
+        text-align: left;
     }
-    img {
-        margin: 10px;
-    }
-    button {
-        display: inline-block;
-        background: #fff;
-        border: 1px dotted lightgrey;
-        padding: 20px;
-        margin: 0 auto;
-    }
-    button:hover {
-        border: 1px solid lightgrey;
+    span {
+        font-weight: bolder;
     }
 }
-
+.resume {
+    text-align: left;
+}
 //portfolio section
 .works {
-    border: 1px solid lightgrey;
     width: 250px;
     height: 250px;
     margin: 20px;
-    object-fit: contain;
+    object-fit: cover;
     filter: grayscale(70%);
     padding: 25px;
-}
-ul {
-    li {
-        list-style-type: none;
-        color: darkgrey;
-    }
 }
 .portfolio-work {
-    border: 1px solid lightgrey;
-    width: 250px;
-    height: 250px;
+    //    border: 1px solid lightgrey;
+    width: 200px;
+    height: 200px;
     margin: 20px;
-    object-fit: contain;
+    object-fit: cover;
     filter: grayscale(70%);
-    padding: 25px;
+    //    padding: 25px;
     display: inline-block;
 }
 .hovereffect {
@@ -238,106 +216,99 @@ ul {
     position: relative;
     text-align: center;
     cursor: default;
-}
-.hovereffect .overlay {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    overflow: hidden;
-    top: 0;
-    left: 0;
-    opacity: 0;
-    background-color: rgba(0, 0, 0, 0.5);
-    -webkit-transition: all .4s ease-in-out;
-    transition: all .4s ease-in-out;
-    a:link,
-    a:visited,
-    a:hover {
-        color: #fff;
-    }
-}
-.hovereffect img {
-    display: block;
-    position: relative;
-    -webkit-transition: all .4s linear;
-    transition: all .4s linear;
-}
-.hovereffect h2 {
-    text-transform: uppercase;
-    color: #fff;
-    text-align: center;
-    position: relative;
-    font-size: 17px;
-    background: rgba(0, 0, 0, 0.6);
-    -webkit-transform: translatey(-100px);
-    -ms-transform: translatey(-100px);
-    transform: translatey(-100px);
-    -webkit-transition: all .2s ease-in-out;
-    transition: all .2s ease-in-out;
-    padding: 10px;
-}
-.hovereffect a.info {
-    text-decoration: none;
-    display: inline-block;
-    text-transform: uppercase;
-    color: #fff;
-    border: 1px solid #fff;
-    background-color: transparent;
-    opacity: 0;
-    filter: alpha(opacity=0);
-    -webkit-transition: all .2s ease-in-out;
-    transition: all .2s ease-in-out;
-    margin: 50px 0 0;
-    padding: 7px 14px;
-}
-.hovereffect a.info:hover {
-    box-shadow: 0 0 5px #fff;
-}
-.hovereffect:hover img {
-    -ms-transform: scale(1.2);
-    -webkit-transform: scale(1.2);
-    transform: scale(1.2);
-}
-.hovereffect:hover .overlay {
-    opacity: 1;
-    filter: alpha(opacity=100);
-}
-.hovereffect:hover h2,
-.hovereffect:hover a.info {
-    opacity: 1;
-    filter: alpha(opacity=100);
-    -ms-transform: translatey(0);
-    -webkit-transform: translatey(0);
-    transform: translatey(0);
-}
-.hovereffect:hover a.info {
-    -webkit-transition-delay: .2s;
-    transition-delay: .2s;
-}
-
-// skills section
-.skills {
-    line-height: 50px;
-    li {
-        padding: 10px;
-        display: inline;
-        list-style-type: none;
-        border-bottom: 1px dotted lightgrey;
-        //            border-radius: 50%;
-        width: 100px;
-        height: 100px;
-        margin: 10px;
+    border: 10px solid #e2e2e2;
+    .overlay {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        overflow: hidden;
+        top: 0;
+        left: 0;
+        opacity: 0;
+        background-color: rgba(255, 255, 255, 0.8);
+        -webkit-transition: all .4s ease-in-out;
+        transition: all .4s ease-in-out;
+        //border: 1px solid lightgrey;
+        a:link,
+        .a:visited,
+        {
+            color: #000;
+            padding: 10px;
+        }
+        a:hover {
+            color: $darkpink;
+        }
     }
     img {
-        line-height: 20px;
-        padding: 20px 20px 0px;
+        display: block;
+        position: relative;
+        -webkit-transition: all .4s linear;
+        transition: all .4s linear;
+    }
+    h2 {
+        font-family: $lato;
+        font-weight: bolder;
+        text-transform: uppercase;
+        color: #000;
+        text-align: center;
+        position: relative;
+        font-size: 16px;
+        background: rgba(255, 255, 255, 0.8);
+        -webkit-transform: translatey(-100px);
+        -ms-transform: translatey(-100px);
+        transform: translatey(-100px);
+        -webkit-transition: all .2s ease-in-out;
+        transition: all .2s ease-in-out;
+        padding: 10px;
+        border-bottom: 1px solid lightgrey;
+    }
+    a.info {
+        text-decoration: none;
+        display: inline-block;
+        text-transform: uppercase;
+        color: #000;
+        border: 2px solid #000;
+        background-color: transparent;
+        opacity: 0;
+        filter: alpha(opacity=0);
+        -webkit-transition: all .2s ease-in-out;
+        transition: all .2s ease-in-out;
+        margin: 50px 0 0;
+        padding: 7px 14px;
+        :hover {
+            box-shadow: 0 0 5px #fff;
+        }
     }
 }
-
+.hovereffect:hover {
+    img {
+        -ms-transform: scale(1.2);
+        -webkit-transform: scale(1.2);
+        transform: scale(1.2);
+    }
+    .overlay {
+        opacity: 1;
+        filter: alpha(opacity=100);
+    }
+    h2,
+    a.info {
+        opacity: 1;
+        filter: alpha(opacity=100);
+        -ms-transform: translatey(0);
+        -webkit-transform: translatey(0);
+        transform: translatey(0);
+    }
+    a.info {
+        -webkit-transition-delay: .2s;
+        transition-delay: .2s;
+    }
+}
 // footer section
 footer {
     text-align: center;
     padding: 2em;
+    background-color: #eeeeee;
+    width: 100%;
     p {
         font-size: 0.8em;
         color: lightgrey;
@@ -357,9 +328,8 @@ footer {
         width: 1200px;
     }
 }
-@media (max-width: 768px) {
+@media only screen and (max-width: 768px) {
     h1 {
-        font-size: 2em;
         padding: 0;
     }
     h2 {
