--- a/sass/main.css
+++ b/sass/main.css
@@ -1,27 +1,28 @@
-/* line 1, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_reset.scss */
+/* line 1, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_reset.scss */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box; }
 
-/* line 4, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+/* line 4, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
 body {
   font-family: "Lato", serif;
   font-size: 14px;
   color: #484a4c; }
 
-/* line 9, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+/* line 9, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
 p {
   text-align: center;
   font-family: "Lato", serif; }
 
-/* line 13, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+/* line 13, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
 .container {
   margin-left: auto;
   margin-right: auto;
-  text-align: center; }
+  text-align: center;
+  max-height: 1200px; }
 
-/* line 19, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+/* line 20, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
 h1 {
   font-family: "Old Standard TT", serif;
   color: #484a4c;
@@ -31,7 +32,7 @@ h1 {
   font-weight: normal;
   text-transform: uppercase; }
 
-/* line 28, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+/* line 29, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
 h2 {
   font-family: "Old Standard TT", serif;
   color: #484a4c;
@@ -39,7 +40,7 @@ h2 {
   text-align: center;
   font-weight: normal; }
 
-/* line 35, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+/* line 36, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
 h3 {
   font-family: "Old Standard TT", serif;
   line-height: 100px;
@@ -48,96 +49,97 @@ h3 {
   font-weight: normal;
   text-transform: uppercase; }
 
-/* line 43, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+/* line 44, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
 h4 {
   padding: 10px; }
 
-/* line 47, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+/* line 48, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
 a:link {
   text-decoration: none;
   color: #484a4c; }
 
-/* line 51, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+/* line 52, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
 a:visited {
   text-decoration: none;
   color: #484a4c; }
 
-/* line 55, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+/* line 56, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
 a:hover {
   text-decoration: none;
   color: #946f6f; }
 
-/* line 60, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+/* line 61, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
 nav {
   text-align: center;
   width: 100%;
   background-color: transparent; }
-  /* line 65, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+  /* line 66, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
   nav .menu li,
   nav ul {
     display: inline-block; }
 
-/* line 71, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+/* line 72, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
 nav a:link {
   text-decoration: none;
   color: black; }
 
-/* line 75, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+/* line 76, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
 nav a:visited {
   text-decoration: none;
   color: black; }
 
-/* line 79, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+/* line 80, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
 nav a:hover {
   transition: all 0.4s ease-out;
   text-decoration: none;
   color: #946f6f; }
 
-/* line 86, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+/* line 87, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
 header {
   background: linear-gradient(rgba(255, 255, 255, 0.95), rgba(255, 255, 255, 0.45)), url(../images/95cdfeef.jpg);
   background-size: cover;
   min-height: 100vh;
+  max-height: 2000px;
   text-align: center;
   line-height: 100px;
   color: #000;
   display: flex;
   align-items: center;
   justify-content: center; }
-  /* line 97, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+  /* line 99, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
   header a:link {
     text-decoration: none;
     color: #484a4c; }
-  /* line 101, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+  /* line 103, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
   header a:visited {
     text-decoration: none;
     color: #484a4c; }
-  /* line 105, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+  /* line 107, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
   header a:hover {
     transition: all 0.4s ease-out;
     text-decoration: none;
     color: #946f6f; }
-  /* line 111, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+  /* line 113, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
   header button {
     background: transparent;
     border: 0;
     padding: 25px;
     color: #fff;
     margin: 0 auto; }
-    /* line 117, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+    /* line 119, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
     header button img {
       transform: translate(0, 0);
       transition: transform 0.4s ease-in-out; }
-    /* line 122, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+    /* line 124, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
     header button:hover img {
       transform: translate(0, 20px);
       transition: transform 0.4s ease-in-out; }
 
-/* line 129, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+/* line 131, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
 section {
   padding: 75px 0; }
 
-/* line 133, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+/* line 135, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
 .sticky {
   width: 100%;
   position: fixed;
@@ -149,7 +151,7 @@ section {
   border-bottom: 1px dotted lightgrey;
   z-index: 2; }
 
-/* line 146, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+/* line 148, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
 ul.menu li {
   list-style-type: none;
   display: inline-block;
@@ -160,18 +162,18 @@ ul.menu li {
   font-size: 0.7em;
   font-weight: 600; }
 
-/* line 159, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+/* line 161, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
 hr {
   border: 0;
   border-top: 1px dotted lightgrey;
   width: 100%; }
-  /* line 163, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+  /* line 165, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
   hr.underline {
     width: 50%;
     margin: 0 auto;
     padding: 40px; }
 
-/* line 170, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+/* line 172, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
 #profilepic {
   border-radius: 50% 0 50% 50%;
   height: 250px;
@@ -179,24 +181,24 @@ hr {
   float: left;
   margin-right: 20px; }
 
-/* line 177, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+/* line 179, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
 .aboutme-text {
   max-width: 80%;
   margin: 0 auto;
   text-align: left; }
-  /* line 181, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+  /* line 183, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
   .aboutme-text p {
     line-height: 35px;
     text-align: left; }
-  /* line 185, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+  /* line 187, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
   .aboutme-text span {
     font-weight: bolder; }
 
-/* line 189, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+/* line 191, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
 .resume {
   text-align: left; }
 
-/* line 193, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+/* line 195, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
 .works {
   width: 250px;
   height: 250px;
@@ -205,7 +207,7 @@ hr {
   filter: grayscale(70%);
   padding: 25px; }
 
-/* line 201, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+/* line 203, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
 .portfolio-work {
   width: 200px;
   height: 200px;
@@ -214,7 +216,7 @@ hr {
   filter: grayscale(70%);
   display: inline-block; }
 
-/* line 211, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+/* line 213, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
 .hovereffect {
   width: 100%;
   height: 100%;
@@ -224,7 +226,7 @@ hr {
   text-align: center;
   cursor: default;
   border: 10px solid #e2e2e2; }
-  /* line 220, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+  /* line 222, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
   .hovereffect .overlay {
     width: 100%;
     height: 100%;
@@ -236,21 +238,21 @@ hr {
     background-color: rgba(255, 255, 255, 0.8);
     -webkit-transition: all 0.4s ease-in-out;
     transition: all 0.4s ease-in-out; }
-    /* line 233, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+    /* line 235, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
     .hovereffect .overlay a:link,
     .hovereffect .overlay .a:visited {
       color: #000;
       padding: 10px; }
-    /* line 238, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+    /* line 240, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
     .hovereffect .overlay a:hover {
       color: #946f6f; }
-  /* line 242, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+  /* line 244, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
   .hovereffect img {
     display: block;
     position: relative;
     -webkit-transition: all 0.4s linear;
     transition: all 0.4s linear; }
-  /* line 248, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+  /* line 250, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
   .hovereffect h2 {
     font-family: "Lato", serif;
     font-weight: bolder;
@@ -267,7 +269,7 @@ hr {
     transition: all 0.2s ease-in-out;
     padding: 10px;
     border-bottom: 1px solid lightgrey; }
-  /* line 265, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+  /* line 267, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
   .hovereffect a.info {
     text-decoration: none;
     display: inline-block;
@@ -281,22 +283,22 @@ hr {
     transition: all 0.2s ease-in-out;
     margin: 50px 0 0;
     padding: 7px 14px; }
-    /* line 278, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+    /* line 280, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
     .hovereffect a.info :hover {
       box-shadow: 0 0 5px #fff; }
 
-/* line 284, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+/* line 286, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
 .hovereffect:hover img {
   -ms-transform: scale(1.2);
   -webkit-transform: scale(1.2);
   transform: scale(1.2); }
 
-/* line 289, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+/* line 291, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
 .hovereffect:hover .overlay {
   opacity: 1;
   filter: alpha(opacity=100); }
 
-/* line 294, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+/* line 296, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
 .hovereffect:hover h2,
 .hovereffect:hover a.info {
   opacity: 1;
@@ -305,54 +307,54 @@ hr {
   -webkit-transform: translatey(0);
   transform: translatey(0); }
 
-/* line 301, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+/* line 303, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
 .hovereffect:hover a.info {
   -webkit-transition-delay: .2s;
   transition-delay: .2s; }
 
-/* line 307, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+/* line 309, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
 footer {
   text-align: center;
   padding: 2em;
   background-color: #eeeeee;
   width: 100%; }
-  /* line 312, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+  /* line 314, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
   footer p {
     font-size: 0.8em;
     color: lightgrey; }
-    /* line 315, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+    /* line 317, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
     footer p a:link {
       color: lightgrey; }
-    /* line 318, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+    /* line 320, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
     footer p a:visited {
       color: lightgrey; }
-    /* line 321, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+    /* line 323, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
     footer p a:hover {
       color: grey; }
 
 @media only screen and (min-width: 1200px) {
-  /* line 327, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+  /* line 329, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
   .container {
     width: 1200px; } }
 
 @media only screen and (max-width: 768px) {
-  /* line 332, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+  /* line 334, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
   h1 {
     padding: 0; }
-  /* line 335, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+  /* line 337, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
   h2 {
     font-size: 1em;
     padding: 0; }
-  /* line 340, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+  /* line 342, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
   nav img {
     display: none; }
-  /* line 344, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+  /* line 346, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
   #profilepic {
     height: 100px; }
-  /* line 347, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+  /* line 349, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
   hr {
     padding: 0; }
-  /* line 350, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io-v2/sass/partials/_base.scss */
+  /* line 352, C:/Users/Patrycja/Desktop/programming/patrycjakubiczek.github.io/sass/partials/_base.scss */
   li {
     padding: 5px; } }
 
